--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,5 @@
+/* Common */
+
 .content {
   max-width: 960px;
   display: block;
@@ -23,4 +25,12 @@
 .mdl-navigation__link.auth-drop-down-menu {
   position: relative;
   padding: 0;
+}
+
+/* LandingPage */
+
+.landing-page {
+  width: 400px;
+  margin: 100px auto;
+  text-align: center;
 }
