Fetch device before loading route. Update UI

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,7 @@
   max-width: 960px;
   margin: 0 auto 120px;
   padding: 40px;
+  justify-content: center;
 }
 
 .avatar {
@@ -12,8 +13,22 @@
   border-radius: 50%;
 }
 
+video {
+  height: 100%;
+  width: 100%;
+}
+
+/* Spinner */
 .mdl-spinner.is-active .mdl-spinner__layer {
   border-color: #FFFFFF;
+}
+
+/* Card */
+.mdl-card .mdl-card__supporting-text {
+    margin: 40px;
+    padding: 0;
+    color: inherit;
+    width: calc(100% - 80px);
 }
 
 /* Auth menu */
