Show an image when media stream is not available.
Currently it's only shown if stream is not available at all.
However, we should be listening for changes of stream.active property as well.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,9 +13,21 @@
   border-radius: 50%;
 }
 
-video {
+.video.video-on video {
   height: 100%;
   width: 100%;
+}
+
+.video.video-off {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vw;
+  background-color: #757575;
+}
+
+.video.video-off .material-icons {
+  font-size: 40px;
 }
 
 /* Spinner */
