Improve displaying of Incidents List

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,3 +77,10 @@ html, body {
   margin: 100px auto;
   text-align: center;
 }
+
+/* InsidentList */
+
+.incident-list {
+  height: 200px;
+  overflow-y: scroll;
+}
