Improve Incident lists UX

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,9 +78,9 @@ html, body {
   text-align: center;
 }
 
-/* InsidentList */
+/* IncidentList */
 
 .incident-list {
-  height: 200px;
+  height: 300px;
   overflow-y: scroll;
 }
