wip! Update packages
Added the loading screen to fix the issue with async auth check.

There are still other issues, e.g. notifications don' work.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,6 +10,13 @@ html, body {
   justify-content: center;
 }
 
+button.link {
+  border: none;
+  text-align: left;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 /* Card */
 .mdl-card .mdl-card__supporting-text {
     margin: 40px;
