Make the font look less like comic sans

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -80,7 +80,7 @@ button.link {
 }
 
 .landing-page h2, h5 {
-  font-family: 'Handlee', serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .landing-page button {
