Improve positioning of launch button

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -84,8 +84,9 @@ button.link {
 }
 
 .landing-page button {
+  margin-top: 50px;
   height: 80px;
-  width: 200px;
+  width: 260px;
   font-size: 2em;
 }
 
